inf/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ticked
    tier: backend
    deployedBy: deploy-node-app
  name: ticked
spec:
  minReadySeconds: 5
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ticked
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ticked
        tier: backend
        deployedBy: deploy-node-app
    spec:
      containers:
        - image: 'jusola/ticked:next'
          imagePullPolicy: Never
          name: ticked
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 128Mi
            requests:
              cpu: 3m
              memory: 64Mi
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
