inf/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticked-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ticked
          servicePort: 5000
